<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".views.LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="Verify"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/you_ll"
        android:textColor="@color/colorLightBlack"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_receive"
        android:layout_marginStart="10dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/email"
            android:backgroundTint="@color/colorLightWhite"
            android:hint="Code"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="200dp" />


    </LinearLayout>


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@id/ll_email"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/light_gray"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="243dp" />


    <Button
        android:id="@+id/btn_verify_code"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/view4"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:background="@drawable/round_button_purple"
        android:text="@string/verify_code"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_verify_code"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/resend"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/illustration1">

    </FrameLayout>
</RelativeLayout>
