<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.techease.ultimatesavings.views.ui.login.LoginViewModel" />
    </data>
<RelativeLayout
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_content_margin"
    tools:context=".views.LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/textView3"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/screen_padding"
            android:src="@mipmap/email"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="215dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/email"
            android:backgroundTint="@color/colorLightWhite"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="200dp" />


    </LinearLayout>


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@id/ll_email"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/light_gray"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="243dp" />


    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/view4"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/text_content_margin"
            android:src="@mipmap/password"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="283dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/password"
            android:backgroundTint="@color/colorLightWhite"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="269dp" />
    </LinearLayout>


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@id/ll_password"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/light_gray"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="314dp" />

    <LinearLayout
        android:id="@+id/ll_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_marginTop="10dp"
        android:paddingStart="12.5dp">

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/remember_me" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_remember"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:text="@string/forgot_password"
        android:onClick="@{()-> viewModel.onForgotClick()}"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="@drawable/round_button_purple"
        android:text="@string/login"
        android:onClick="@{()-> viewModel.onLoginClick()}"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/ll_new_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_here" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:onClick="@{()-> viewModel.onRegisterButtonClick()}"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_tv_sign_in_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_new_here"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in_with" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tv_sign_in_with"
        android:background="@mipmap/illustration1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/fb" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/google" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/twitter" />

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
</layout>